2000-07-26  Jeffrey Stedfast  <fejj@helixcode.com>

	* mail-ops.c: s/struct refile_data/struct move_data
	(real_move_msg): Renamed from real_refile_msg()
	(move_msg): Renamed from refile_msg()

	* folder-browser-factory.c: Changed Refile to Move.

2000-07-26  Dan Winship  <danw@helixcode.com>

	* mail-format.c (lookup_handler): Update for OAF and for external
	apps as well as components.
	(handle_via_external): Handler to set up for data that can be
	displayed by an external application.

	* mail-display.c (on_link_clicked, etc): Refactor the save_data()
	code and add launch_external() as a handler for
	x-evolution-external URLs.
	(embeddable_destroy_cb): Remove this, since it seems like it's all
	wrong.
	(on_object_requested): Update for OAF, and fix some bugs.

2000-07-25  Jeffrey Stedfast  <fejj@helixcode.com>

	* mail-config.c (get_service_url): Always prepend a leading "/" to
	the url->path.
	(set_service_url): Added more error checking and also strip the
	leading '/' from the url->path
	(create_identity_page): Set the signature file to the one specified in
	the identity record, else set the default path to ~/.sugnature

2000-07-25  Michael Meeks  <michael@helixcode.com>

	* mail-config.c (create_identity_page): set default signature to
	~/.signature

2000-07-25  Peter Williams  <peterw@helixcode.com>

	* mail-ops.c (reply): Check for the case of fb->mail_display->
	current_message = NULL, which shouldn't happen, but has happened
	to me.

2000-07-25  Dan Winship  <danw@helixcode.com>

	* message-thread.c (group_root_set): Don't group together messages
	with the same non-Re: subject and no References/In-Reply-To. More
	often than not, they're unrelated. (eg, "[No subject]".)
	(thread_messages): Handle messages with no Message-Id. "This
	shouldn't happen", but it does sometimes, and it's not much code
	to make it just work.

2000-07-25  Ettore Perazzoli  <ettore@helixcode.com>

	* mail-config.c (create_service_page): Call