@@ -1,3 +1,12 @@
+2000-07-26  Dan Winship  <danw@helixcode.com>
+
+	* mail-ops.c (real_fetch_mail): Don't create the tmp_mbox before
+	calling movemail, because the external movemail requires it to not
+	exist. Contrariwise, delete it in the cleanup code if it's empty.
+	Update for camel_movemail interface change. Do the "No new
+	messages" dialog in the mbox case as well as the remote mail
+	issue.
+
 2000-07-26  Jeffrey Stedfast  <fejj@helixcode.com>
 
 	* mail-ops.c: s/struct refile_data/struct move_data
